--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <title>
-      Functions's Plotter
+      Functions' Plotter
     </title>
     <meta charset="utf-8" />
     <script src="https://d3js.org/d3.v3.min.js"></script>
